Add support for special characters in Pipeline names. Also changed some code to use new Java version features.